fix overflow give up game + chatbox scroll

--- a/front/src/pages/Play/css/Play.scss
+++ b/front/src/pages/Play/css/Play.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   min-width: 400px;
+  height: 100%;
+  width: 100%;
   align-items: center;
 
   .profile-infos-container {
@@ -132,6 +134,7 @@
     align-items: center;
     text-align: center;
     width: 85%;
+    height: 60%;
     margin-top: 20px;
     color: white;
   }
@@ -139,6 +142,8 @@
   .pong-game-canvas {
     position: relative;
     display: flex;
+    height: 100%;
+    width: 100%;
     top: 50;
     left: 50%;
     transform: translateX(-50%);
